added an h5 tagline

--- a/blue.css
+++ b/blue.css
@@ -14,6 +14,7 @@ body {
 
 h1 {
     font-size: 35px;
+    margin-bottom: 0;
 }
 
 h2 {
@@ -22,6 +23,11 @@ h2 {
 
 h3 {
     font-size: 25px;
+}
+
+h5 {
+    font-size: 14.8px;
+    margin-top: 0;
 }
 
 p {
