--- a/blue.css
+++ b/blue.css
@@ -63,6 +63,10 @@ input {
     margin-bottom: 0;
 }
 
+#asterisk {
+    color: gray;
+}
+
 #submit {
     color: white;
     background-color: purple;
